DOCS: auto include headers in docs, show files, dirs, includes

--- a/docs/dev/doxygen.cfg
+++ b/docs/dev/doxygen.cfg
@@ -7,9 +7,8 @@ QUIET			= YES
 
 FULL_PATH_NAMES		= YES
 CASE_SENSE_NAMES	= NO
-RECURSIVE		= NO
-INPUT			= birnet/ sfi/ bse/ plugins/ plugins/freeverb/ beast-gtk/ launchers/ shell/ tools/
-FILE_PATTERNS		= *.idl *.c *.h *.cc *.hh *.proc
+RECURSIVE		= YES
+FILE_PATTERNS		= *
 EXCLUDE			=
 BUILTIN_STL_SUPPORT	= YES
 TYPEDEF_HIDES_STRUCT	= YES
@@ -18,20 +17,24 @@ TYPEDEF_HIDES_STRUCT	= YES
 #INCLUDE_PATH		= /usr/include/
 
 EXTRACT_ALL		= NO
-EXTRACT_PRIVATE        = NO
+EXTRACT_PRIVATE		= NO
 EXTRACT_STATIC		= NO
 EXTRACT_LOCAL_CLASSES	= NO
 EXTRACT_LOCAL_METHODS	= NO
 EXTRACT_ANON_NSPACES	= NO
+HIDE_IN_BODY_DOCS	= YES
+
+INTERNAL_DOCS		= NO
 HIDE_UNDOC_MEMBERS	= NO
 HIDE_FRIEND_COMPOUNDS	= YES
-SHOW_INCLUDE_FILES	= NO
+SHOW_USED_FILES 	= YES
+SHOW_DIRECTORIES 	= YES
+SHOW_INCLUDE_FILES	= YES
 JAVADOC_AUTOBRIEF	= NO
 INHERIT_DOCS		= YES
 ENABLED_SECTIONS	= ""
 MACRO_EXPANSION		= YES
 PREDEFINED		= DOXYGEN "ATTRIBUTE_UNUSED=" "link_warning(x,y)=" "G_BEGIN_DECLS=" "G_END_DECLS="
-INTERNAL_DOCS		= YES
 EXPAND_ONLY_PREDEF	= YES
 #ENABLE_PREPROCESSING	= YES
 
@@ -56,9 +59,9 @@ CLASS_GRAPH		= YES
 COLLABORATION_GRAPH	= YES
 GROUP_GRAPHS		= YES
 TEMPLATE_RELATIONS	= NO
-INCLUDE_GRAPH		= YES
+INCLUDE_GRAPH		= NO
 INCLUDED_BY_GRAPH	= YES
 GRAPHICAL_HIERARCHY	= YES
 DIRECTORY_GRAPH		= YES
 CALL_GRAPH		= NO
-CALLER_GRAPH		= YES
+CALLER_GRAPH		= NO
