--- a/sfi/Makefile.am
+++ b/sfi/Makefile.am
@@ -19,9 +19,9 @@ sfi_public_headers = $(strip \
 )
 sfi_all_sources = $(strip \
 	sfistore.c	sficomwire.cc	sfifilecrawler.cc \
-	glib-extra.c			sfiwrapper.cc	 \
+	glib-extra.c			sfiwrapper.cc	sfiprimitives.cc \
 	sfivmarshal.c	sfiglue.c	sfigluecodec.c	sfiglueproxy.c	\
-	sfinote.c	sfiparams.c	sfiprimitives.c	sfiserial.c	\
+	sfinote.c	sfiparams.c			sfiserial.c	\
 	sfitime.c	sfitypes.c	sfivalues.c	sfiustore.c	\
 	sficxx.cc	sfiring.cc	sfimemory.cc	sficomport.cc	\
 	$(conditional_toyprof_sources)	\
