BSE: compile bsefilter-ellf as C++ source

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -68,7 +68,7 @@ bse_sources = $(strip \
 	\
 	bseengine.c		bseenginemaster.c	bseengineschedule.c		bseengineutils.c \
 	bsebus.cc		bsecategories.cc 	\
-	bsefilter.cc   		bsebiquadfilter.cc	bsefilter-ellf.c	\
+	bsefilter.cc   		bsebiquadfilter.cc	bsefilter-ellf.cc	\
 	bseconstant.cc		bseconstvalues.cc	bsecontainer.cc			bsecontextmerger.cc \
 	bsedatapocket.cc	bseeditablesample.cc	bseenums.cc			bsegconfig.c \
 	bseglobals.c		bseglue.c		bseitem.c			bsejanitor.c \
